--- a/home.html
+++ b/home.html
@@ -16,15 +16,21 @@
     .event-logo{
         -webkit-filter: invert(100%);
         filter: invert(100%);
-        height:150px;
-        width:150px;
+        height:200px;
+        width:200px;
+        padding-left:50px;
+        padding-right:0px;
+        padding-top:25px;
+        padding-bottom:0px;
     }
     .event-title{
         color:#C0C0C0;
         text-shadow:0 0 15px #6e7c7c,0 0 15px #6e7c7c,0 0 15px #6e7c7c,0 0 15px #6e7c7c;
         font-family:Rubik;
         font-size:150px;
-        margin:0;
+        padding-left:50px;
+        padding-right:0px;
+        margin-left:0px;
     }
     .event-date{
         color:white;
@@ -65,6 +71,8 @@
         margin-right:150px;
         position:relative;
         transition: transform 1s;
+        padding-left:200px;
+        padding-right:0px;
     }
     .letters {
         position:absolute;
@@ -219,12 +227,17 @@
 </head>
 <body style="background-color:white;position:relative;margin:0;">
     <div style="background-color:black;padding:20px 0 200px;">
-    <div class="row">
-        <div class="col-sm-1"></div>
-        <div class="col-sm-2"><img class="event-logo col-lg-2" src="https://pbs.twimg.com/profile_images/441576667253731328/wSmEP_Wf_400x400.png"></div>
-        <div class="col-md-8"><p class="event-title col-lg-6">MECHANICA</p></div>
-    </div>
-        <table class="year-table" cellspacing="20px" cellpadding="20px;">
+
+        <table cellpadding="20px" cellspacing="0px">
+                <td>
+                    <div class="row">
+        <div class="col-lg-2 col-sm-2 "><img class="event-logo col-lg-2" src="https://pbs.twimg.com/profile_images/441576667253731328/wSmEP_Wf_400x400.png"></div>
+        <div class="col-lg-8 col-sm-12"><p class="event-title col-lg-6">MECHANICA</p></div>
+    </div></td>
+        </table>
+        <table cellpadding="20px" cellspacing="100px">
+            <tr>
+        <td><table class="year-table" cellspacing="20px" cellpadding="20px;">
             <tr>
                 <td><h1 class="year-num">2</h1></td>
                 <td><img src="https://i.gifer.com/PSef.gif" class="year-gear"></td>
@@ -232,8 +245,8 @@
                 <td><h1 class="year-num">1</h1></td>
             </tr>
         </table>
-    <p class="event-date">April 9th-11th</p>
-        <div align="right" class="nav-gear">
+            </td>
+        <td style="padding-top:50px;"><div align="right" class="nav-gear">
             <div style="position:absolute;right:115px;top:-70px;">
                 <div class="mid-light a">
                     <span class="letters" id="nb-1-1">E</span>
@@ -269,7 +282,11 @@
                 </div>
             </div>
             <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Gear_7.svg/1200px-Gear_7.svg.png">
-       </div>
+       </div></td>
+            </tr>
+            <tr>   <td> <p class="event-date">April 9th-11th</p></td>
+</tr>
+            </table>
     </div>
         <div id="carouselExampleIndicators" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="2000" data-bs-pause="false">
         <div class="carousel-indicators">
