--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
         padding-right:0px;
         padding-top:25px;
         padding-bottom:0px;
+        margin-right:0px;
     }
     .event-title{
         color:#C0C0C0;
@@ -29,7 +30,6 @@
         font-family:Rubik;
         font-size:150px;
         padding-left:50px;
-        padding-right:0px;
         margin-left:0px;
     }
     .event-date{
@@ -72,7 +72,7 @@
         position:relative;
         transition: transform 1s;
         padding-left:200px;
-        padding-right:0px;
+        margin-right:0px;
     }
     .letters {
         position:absolute;
@@ -82,6 +82,9 @@
         display:inline-block;
         padding-bottom:100px;
         width:30px;
+    }
+    .t{
+        margin:0;
     }
                 #nb-1-1{
                     transform: rotate(-25deg);
@@ -225,100 +228,70 @@
 
 </style>
 </head>
-<body style="background-color:white;position:relative;margin:0;">
-    <div style="background-color:black;padding:20px 0 200px;">
-
-        <table cellpadding="20px" cellspacing="0px">
-                <td>
-                    <div class="row">
-        <div class="col-lg-2 col-sm-2 "><img class="event-logo col-lg-2" src="https://pbs.twimg.com/profile_images/441576667253731328/wSmEP_Wf_400x400.png"></div>
-        <div class="col-lg-8 col-sm-12"><p class="event-title col-lg-6">MECHANICA</p></div>
-    </div></td>
+<body style="background-color:black;position:relative;margin:0px;">
+        <table cellpadding="20px" cellspacing="0px" class="t">
+        <td>
+            <div class="row">
+                <div class="col-lg-2 col-sm-2 "><img class="event-logo col-lg-2" src="https://pbs.twimg.com/profile_images/441576667253731328/wSmEP_Wf_400x400.png"></div>
+                <div class="col-lg-8 col-sm-12"><p class="event-title col-lg-6">MECHANICA</p></div>
+            </div>
+        </td>
         </table>
-        <table cellpadding="20px" cellspacing="100px">
-            <tr>
-        <td><table class="year-table" cellspacing="20px" cellpadding="20px;">
-            <tr>
-                <td><h1 class="year-num">2</h1></td>
-                <td><img src="https://i.gifer.com/PSef.gif" class="year-gear"></td>
-                <td><h1 class="year-num">2</h1></td>
-                <td><h1 class="year-num">1</h1></td>
-            </tr>
-        </table>
+        <table cellpadding="20px" cellspacing="100px" class="t">
+        <tr>
+            <td>
+                <table class="year-table" cellspacing="20px" cellpadding="20px;">
+                    <tr>
+                        <td><h1 class="year-num">2</h1></td>
+                        <td><img src="https://i.gifer.com/PSef.gif" class="year-gear"></td>
+                        <td><h1 class="year-num">2</h1></td>
+                        <td><h1 class="year-num">1</h1></td>
+                    </tr>
+                </table>
             </td>
-        <td style="padding-top:50px;"><div align="right" class="nav-gear">
-            <div style="position:absolute;right:115px;top:-70px;">
-                <div class="mid-light a">
-                    <span class="letters" id="nb-1-1">E</span>
-                    <span class="letters" id="nb-1-2">v</span>
-                    <span class="letters" id="nb-1-3">e</span>
-                    <span class="letters" id="nb-1-4">n</span>
-                    <span class="letters" id="nb-1-5">t</span>
-                    <span class="letters" id="nb-1-6">s</span>
+            <td style="padding-top:50px;"><div align="right" class="nav-gear">
+                <div style="position:absolute;right:115px;top:-70px;">
+                    <div class="mid-light a">
+                        <span class="letters" id="nb-1-1">E</span>
+                        <span class="letters" id="nb-1-2">v</span>
+                        <span class="letters" id="nb-1-3">e</span>
+                        <span class="letters" id="nb-1-4">n</span>
+                        <span class="letters" id="nb-1-5">t</span>
+                        <span class="letters" id="nb-1-6">s</span>
+                    </div>
+                    <div class="mid-light b">
+                        <span class="letters" id="nb-2-1">S</span>
+                        <span class="letters" id="nb-2-2">p</span>
+                        <span class="letters" id="nb-2-3">o</span>
+                        <span class="letters" id="nb-2-4">n</span>
+                        <span class="letters" id="nb-2-5">s</span>
+                    </div>
+                    <div class="mid-light c">
+                        <span class="letters" id="nb-3-1">T</span>
+                        <span class="letters" id="nb-3-2">e</span>
+                        <span class="letters" id="nb-3-3">a</span>
+                        <span class="letters" id="nb-3-4">m</span>
+                    </div>
+                    <div class="mid-light d">
+                        <span class="letters" id="nb-4-1">W</span>
+                        <span class="letters" id="nb-4-2">o</span>
+                        <span class="letters" id="nb-4-3">r</span>
+                        <span class="letters" id="nb-4-4">k</span>
+                        <span class="letters" id="nb-4-5">S</span>
+                        <span class="letters" id="nb-4-6">h</span>
+                        <span class="letters" id="nb-4-7">o</span>
+                        <span class="letters" id="nb-4-8">p</span>
+                        <span class="letters" id="nb-4-9">s</span>
+                    </div>
                 </div>
-                <div class="mid-light b">
-                    <span class="letters" id="nb-2-1">S</span>
-                    <span class="letters" id="nb-2-2">p</span>
-                    <span class="letters" id="nb-2-3">o</span>
-                    <span class="letters" id="nb-2-4">n</span>
-                    <span class="letters" id="nb-2-5">s</span>
+                    <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Gear_7.svg/1200px-Gear_7.svg.png">
                 </div>
-                <div class="mid-light c">
-                    <span class="letters" id="nb-3-1">T</span>
-                    <span class="letters" id="nb-3-2">e</span>
-                    <span class="letters" id="nb-3-3">a</span>
-                    <span class="letters" id="nb-3-4">m</span>
-                </div>
-                <div class="mid-light d">
-                    <span class="letters" id="nb-4-1">W</span>
-                    <span class="letters" id="nb-4-2">o</span>
-                    <span class="letters" id="nb-4-3">r</span>
-                    <span class="letters" id="nb-4-4">k</span>
-                    <span class="letters" id="nb-4-5">S</span>
-                    <span class="letters" id="nb-4-6">h</span>
-                    <span class="letters" id="nb-4-7">o</span>
-                    <span class="letters" id="nb-4-8">p</span>
-                    <span class="letters" id="nb-4-9">s</span>
-                </div>
-            </div>
-            <img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ac/Gear_7.svg/1200px-Gear_7.svg.png">
-       </div></td>
+            </td>
             </tr>
-            <tr>   <td> <p class="event-date">April 9th-11th</p></td>
-</tr>
-            </table>
-    </div>
-        <div id="carouselExampleIndicators" class="carousel carousel-fade" data-bs-ride="carousel" data-bs-interval="2000" data-bs-pause="false">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1" style="height:5px;"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2" style="height:5px;"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://res.cloudinary.com/highereducation/image/upload/f_auto,fl_lossy,q_auto/c_fill,w_1200,h_628/v1566232749/BestColleges.com/BC-Career-Mechanical_engineering_vu3sha.jpg" style="height:700px;width:100%;">
-            </div>
-            <div class="carousel-item">
-                <img src="https://engineering.tamu.edu/engineering-online/_files/_images/_content-images/engineering-online-mechanical-29Apr2019.jpg" style="height:700px;width:100%;">
-            </div>
-        </div>
-    </div>
-    <div class="footer">
-        <table align="center" cellpadding="20px">
-            <tr>
-                <td>
-                    <a href="https://www.instagram.com/mechanica.iitmadras">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/5/58/Instagram-Icon.png" height="40px" width="40px">
-                    </a>
-                </td>
-                <td>
-                    <a href="https://www.facebook.com/mechanica.iitm/"><img
-                            src="https://cdn.iconscout.com/icon/free/png-256/facebook-logo-2019-1597680-1350125.png"
-                            height="40px" width="40px">
-                    </a>
-                </td>
+            <tr>   
+                <td><p class="event-date">April 9th-11th</p></td>
             </tr>
-        </table>
-    </div>
+       </table>
 <script>
     document.querySelector(".a").addEventListener("click", moven);
     function moven() {
